src/test/deca/syntax/parser/invalid/inst_expr_print_bracket_not_closed.deca
// Parser test, parenthese not closed

{
    int x = 5;
    print(x ;
}